--- a/index.html
+++ b/index.html
@@ -213,6 +213,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="technology">
+      <div class="headline">JESUS DECENDS FROM HEAVEN TO CHECK STACK OVERFLOW</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
